Match Bedrock collision shapes for bars, walls, and misc blocks
Iron bars, glass panes, and walls cannot round-trip their Bedrock shape
through a Java block state, so reshaping via applyConnectionShape loses
geometry. Add a connectionCollisionOverride hook on the delegate that
builds the local boxes straight from the neighbour states, and use it
for both families.

Also correct several shapes that diverged from Bedrock:
- pointed dripstone now behaves like bamboo (vertical-collision only)
- hanging lanterns use a raised box
- turtle eggs and dragon eggs get their own shapes
- double chests use the single-chest shape, matching Bedrock

Replace hardcoded block identity checks for bars, lanterns, anvils, and
cauldrons with mapping lists so the sets stay in one place.